search box by id - needs refactor