@@ -2,4 +2,9 @@
 
 run with <code>mvn clean compile javafx:run</code>
 
-this is forked repository https://github.com/rashidmayes/Clairvoyance
+#### this is forked repository https://github.com/rashidmayes/Clairvoyance
+
+### for intellij
+1. download javafx sdk
+2. add vm options:
+<code>--module-path >>some-path<</javafx-sdk-20.0.1/lib --add-modules javafx.graphics,javafx.base,javafx.controls,javafx.fxml</code>
